--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
-            src="{{mars.featured_image | default('images/screenshot_3.png', true) }}"
+            src="{{mars.featured_image | default('Images/screenshot_3.png', true) }}"
             class="img-responsive"
             alt="Responsive image"
           />
@@ -63,7 +63,7 @@
         {% for hemisphere in mars.hemispheres %}
         <div class="col-md-3">
           <div class="thumbnail">
-            <img src="{{hemisphere.image_url | default('images/screenshot_4.png', true)}}" alt="...">
+            <img src="{{hemisphere.image_url | default('Images/screenshot_4.png', true)}}" alt="...">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
